...

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8/21/2016"
                    android:layout_weight="1"
                    android:id="@+id/dateInputTextView"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
...
